# cpp_code

./: gcc_install_command.sh  readme.md
app_atcoder/: submit1.cpp  submit4.cpp
app_atcoder/abc135d/: submit1.cpp  submit2.cpp  submit3.cpp  submit4.cpp  submit5.cpp
app_atcoder/abc137c/: submit2.cpp  submit3.cpp  submit5.cpp  submit6.cpp
fileio/: Input1Line.cpp  Output1Line.cpp  OutputAll.cpp  parallel_all_of.cpp  parallel_count.cpp  parallel_find.cpp  parallel_lower_bound.cpp  parallel_remove.cpp  parallel_stable_sort.cpp  run.sh
fileio/section9/: CMakeLists.txt  InputBinary.cpp  Output1LineLF.cpp  Output1charLF.cpp
section1/: compile.cpp  define1.cpp
section10/: MatMultiNotAligned.cpp  SIMDSample.cpp
section2/: CMakeLists.txt  analined.cpp  dump.txt  memory.cpp  pipline.cpp  run.sh
section3/: CMakeLists.txt  chrono_cost.cpp  chrono_sample.cpp  chrono_stdev.cpp  gprof_sample.cpp  inf_loop.cpp  run.sh
section4/: Accuracy.cpp  Arithmetic.cpp  Bitwise.cpp  CMakeLists.txt  Factorization.cpp  Mathematics.cpp  Mod.cpp  Variance.cpp  run.sh
section5/: CMakeLists.txt  GetterSetter.cpp  LoopStyle.cpp  Reference.cpp  Strategy.cpp  run.sh
section6/: CMakeLists.txt  MaxMin.cpp  Memory.cpp  Reference.cpp  RepeatCalc.cpp  RepeatNew.cpp  Terminate.cpp  run.sh
section7/: CMakeLists.txt  Reference.cpp  STLAddress.cpp  STLEmplace.cpp  STLEmplaceBack.cpp  STLErase.cpp  STLInsert.cpp  STLIteration.cpp  STLPushBack.cpp  STLPushFront.cpp  STLSearch.cpp  STLSort.cpp  STLStable_sort.cpp  STLsizeof.cpp  run.sh
section8/: parallel_all_of.cpp  parallel_copy.cpp  parallel_count.cpp  parallel_find.cpp  parallel_for_each.cpp  parallel_lower_bound.cpp  parallel_remove.cpp  parallel_sort.cpp  parallel_sort_sorted.cpp  parallel_stable_sort.cpp  parallel_stable_sort_sorted.cpp  parallel_upper_bound.cpp  run.sh
section8/float/: CMakeLists.txt  parallel_all_of.cpp  parallel_copy.cpp  parallel_count.cpp  parallel_find.cpp  parallel_for_each.cpp  parallel_lower_bound.cpp  parallel_remove.cpp  parallel_sort.cpp  parallel_sort_sorted.cpp  parallel_stable_sort.cpp  parallel_stable_sort_sorted.cpp  parallel_upper_bound.cpp
section9/: CMakeLists.txt  Input1char.cpp  InputAll.cpp  MatMulti.cpp  Output1LineLFBinary.cpp  Output1char.cpp  Output1charLF.cpp  OutputAll.cpp  OutputAllLF.cpp  OutputAllLFBinary.cpp  OutputBinary.cpp  SIMDArithmetic.cpp  SIMDArray.cpp  SIMDUnion.cpp  SIMDalignedByAllocator.cpp  aligned_allocator.hpp  normal_rgb2gray.cpp  opencv_rgb2gray.cpp  run.sh  simd_rgb2gray.cpp
section9/section10/: SIMDArray.cpp  SIMDsegmentationFault.cpp
timer/: timer_class.hpp  timer_test.cpp
